salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Fact_Returns__dll/desktop_mf_Fact_Returns__dll.object-meta.xml
<CustomObject>
    <label>Desktop - Fact_Returns</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Engagement</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>