salesforce/generated/sunrun_ingest_api/desktop-mf/objects/desktop_mf_Fact_Returns__dll/fields/Return_Location_ID__c.field-meta.xml
<CustomField>
    <fullName>Return_Location_ID__c</fullName>
    <label>Return Location ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Return_Location_ID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>